@@ -29,14 +29,14 @@
   on Linux/Unix, Windows, and Mac OS X. It is called a
   "document processor", because unlike standard word
   processors, LyX encourages an approach to writing based
-  on the structure of your documents, not their appearance.
-  LyX lets you concentrate on writing, leaving details of
-  visual layout to the software. LyX automates formatting
-  according to predefined rule sets, yielding consistency
-  throughout even the most complex documents. LyX produces
-  high quality, professional output – using LaTeX, an
-  open source, industrial strength typesetting engine, in
-  the background.
+  on the structure of your documents, not their
+  appearance.#' LyX lets you concentrate on writing,
+  leaving details of visual layout to the software. LyX
+  automates formatting according to predefined rule sets,
+  yielding consistency throughout even the most complex
+  documents. LyX produces high quality, professional output
+  - using LaTeX, an open source, industrial strength
+  typesetting engine, in the background.
 }
 \examples{
 \dontrun{
