@@ -6,6 +6,8 @@ NEW FUNCTIONS ADDED:
    * install.7zip - for unzipping of FFmpeg
    * system.PATH - to see what is in the users PATH for running .exe programs.
 
+BUG FIXES:
+   * Fixed a bug in install.LyX.rd that caused it to not load properly when using install_github (props goes to Richard Cotton for catching the bug.)
 
 installR 0.8.6
 --------------
